@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T16:16:47Z",
+  "timestamp" : "2022-04-21T08:15:44Z",
   "count_outdated" : 251,
   "uniques_outdated" : 119,
-  "count" : 262,
-  "uniques" : 128,
+  "count" : 263,
+  "uniques" : 129,
   "clones" : [
     {
       "timestamp": "2022-04-09T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
